--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CKK Social Skills Consultancy</title>
-    <link rel="icon" type="image/png" href=# />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link rel="stylesheet" href="assets/css/vendor.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/custom.css" />
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav align-items-center mr-auto">
                         <li class="nav-item">
-                            <a href=# class="btn btn-rounded">Request Services</a>
+                            <a href="mailto:changkumkol@gmail.com" class="btn btn-rounded">Request Services</a>
                         </li>
                     </ul>
                 </div>
@@ -36,38 +36,14 @@
         <div class="container">
             <div class="row justify-content-center" style="color:#fff">
                 <div class="col-md-8">
-                    <h1 class="text-decorated" style="color:#fff"><b style="color:#fff">CKK Social Skills Consultancy</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+                    <h1 class="text-decorated" style="color:#fff"><b style="color:#fff">CKK Social Skills Consultancy</b> 
+                    Youth Social Services Organization in Queens
+                </h1>
                 </div>
             </div>
         </div>
     </section>
 
-
-<!--           <section class="bg-light separator-top separator-bottom">
-      <div class="container">
-
-        <div class="row align-items-center justify-content-between">
-
-          <div class="col-12 col-lg-5">
-            <img src="assets/images/002.jpg" alt="Image">
-          </div>
-          <div class="col-12 col-lg-1"></div>
-          <div class="col-12 col-lg-6">
-            <div class="row">
-              <div class="col">
-                <h5 class="fs-20 font-weight-bold">ABA Services</h5>
-                <p>
-                  <b>Applied Behavior Analysis</b> therapy focuses on driving positive outcomes for children diagnosed on the autism spectrum, applying the science of how behavior and learning work in real situations. The goal is to foster new skills and lessen behaviors that cause harm or interfere with learning. <br><br>
-                        Private Lesson<br>
-                        $100 / 60 minutes <br>
-                        $140 / 90 minutes
-                </p>
-              </div>
-            </div>
-        </div>
-      </div>
-
-    </section> -->
 
     <section>
         <div class="container">
@@ -90,8 +66,8 @@
               <div class="col">
                 <h5 class="fs-20 font-weight-bold">ABA Services</h5>
                 <p>
-                  <b>Applied Behavior Analysis</b> therapy focuses on driving positive outcomes for children diagnosed on the autism spectrum, applying the science of how behavior and learning work in real situations. The goal is to foster new skills and lessen behaviors that cause harm or interfere with learning. <br><br>
-                        Private Lesson<br>
+                  Applied Behavior Analysis therapy focuses on driving positive outcomes for children diagnosed on the autism spectrum, applying the science of how behavior and learning work in real situations. The goal is to foster new skills and lessen behaviors that cause harm or interfere with learning. <br><br>
+                        <u>Private Lesson</u><br>
                         $100 / 60 minutes <br>
                         $140 / 90 minutes
                 </p>
@@ -111,11 +87,11 @@
                 <p>
                   All children learn through hands-on discovery. Add the ingredients of fun, energetic adults and the love for home cooked food, and you have stirred up the essence of a Lil' Chef. We use seasonal  ingredients for each class.<br><br> 
 
-                  Private Lesson<br> 
+                  <u>Private Lesson</u><br> 
                   $100 / 60 minutes <br>
                   $140 / 90 minutes <br><br>
 
-                  Semi-Private Lesson<br>
+                  <u>Semi-Private Lesson</u><br>
                   $80 / 60 minutes<br>
 
                 </p>
@@ -144,17 +120,17 @@
                 <p>
                   Improve motor skills, promote self-regulation, build important life skills with Yoga. <br><br>
 
-                  Children (Ages 6-9 Years)<br>
+                  <b>Children (Ages 6-9 Years)</b><br>
                   Through the use of stories, music, games and props, founded in theme-based teaching, children release restless energy while honing motor and language skills, boosting body and breathing awareness, and developing self-confidence. Relaxation and self-reflection is included in each session. Children participate in individual, partner and group yoga. <br><br>
 
-                  Yoga for Tweens (Ages 10-13) <br>
+                  <b>Yoga for Tweens (Ages 10-13)</b> <br>
                   Through poses, games and conversation, Yoga for Tweens is designed to help preteens navigate their journey from childhood to teenager. This class gives preteens the tools they need to improve concentration, reduce stress, and explore their bodies and feelings in a fun and positive way. Preteens will challenge their bodies by practicing yoga postures for increased balance, flexibility and strength and connect to their bodies and quiet their minds through breathing exercises. Preteens will also learn how to take their yoga practice off the mat and into their daily lives to help them find ease in the face of today’s challenges. Yoga for Teens Ages 13-18: Being a teenager is hard! The pressures of homework and tests, sports, music performances, and where to fit in the social hierarchy often leave teens feeling stressed, anxious and stripped of energy. This class will equip high school students with the tools to healthily manage their emotions and stress levels, while leaving them feeling empowered and self-confident. Students will learn breathing and centering exercises, yoga postures, relaxation and meditation techniques as well as how and when to use these techniques when facing challenges outside of class. Benefits of movement and meditation include lowered stress, greater relaxation and sleep, and improved concentration and mental clarity. <br><br>
 
-                  Private Lesson<br>
+                  <u>Private Lesson</u><br>
                   $100 / 60 minutes <br>
                   $140 /90 minutes <br><br>
 
-                  Semi-Private Lesson <br>
+                  <u>Semi-Private Lesson</u><br>
                   $80 / 60 minutes 
 
                 </p>
@@ -251,7 +227,7 @@
                 </div>
                 <div class="col col-lg-4"></div>
                 <div class="col-lg-4 text-lg-right">
-                    <a href=# class="envelope bordered">changkumkol@gmail.com</a>
+                    <a href="mailto:changkumkol@gmail.com" class="envelope bordered">changkumkol@gmail.com</a>
                 </div>
             </div>
         </div>
