--- a/index.html
+++ b/index.html
@@ -153,21 +153,21 @@
     <section class="bg-light separator-top separator-bottom">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-md-6">
+                <div class="col-lg-12 col-md-12">
                     <div class="row">
                         <div class="col-lg-12">
                             <h2 style="padding-left:15px">Contact</h2>
                         </div>
                     </div>
                     <div class="row gutter-0">
-                        <div class="col-sm-4 col-lg-4" style="padding:10px" data-aos="fade-up">
+                        <div class="col-sm-12 col-md-12 col-lg-4" style="padding:10px" data-aos="fade-up">
                             <div class="bordered p-3 bg-white">
                                 <i class="icon-basic_elaboration_todolist_search text-primary fs-50 mb-2"></i>
                                 <p style="font-weight:bold; color:#000">Telephone</p>
                                 <p>+1 646-322-1721</p>
                             </div>
                         </div>
-                        <div class="col-sm-4 col-lg-4" style="padding:10px" data-aos="fade-up" data-aos-delay="150">
+                        <div class="col-sm-12 col-md-12 col-lg-4" style="padding:10px" data-aos="fade-up" data-aos-delay="150">
                             <div class="bordered p-3 bg-white" stl>
                                 <i class="icon-basic_globe text-primary fs-50 mb-2"></i>
                                 <p style="font-weight:bold; color:#000">Address</p>
@@ -176,7 +176,7 @@
                                 <a href="https://www.google.com/maps/dir//8+Orchard+Ct,+Roslyn+Heights,+NY+11577/@40.7914058,-73.6762599,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89c28631dcd0f833:0xc14ba0dd8de24372!2m2!1d-73.6411546!2d40.7913461" class="btn btn-rounded" style="background-color:var(--green); color:#fff">Get Directions</a>
                             </div>
                         </div>
-                        <div class="col-sm-4 col-lg-4" style="padding:10px" data-aos="fade-up" data-aos-delay="300">
+                        <div class="col-sm-12 col-md-12 col-lg-4" style="padding:10px" data-aos="fade-up" data-aos-delay="300">
                             <div class="bordered p-3 bg-white">
                                 <i class="icon-basic_elaboration_document_pencil text-primary fs-50 mb-2"></i>
                                 <p style="font-weight:bold; color:#000">Hours</p>
