--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- header -->
     <header class="header-sticky header-light" style="background-color:#f7f6ee;">
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light" style="">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" style="flex-grow:16; color:var(--green); " href="index.html">
                     <h5 style="font-weight:bold;">CKK Social Skills Consultancy</h5>
                 </a>
@@ -37,7 +37,7 @@
             <div class="row justify-content-center" style="color:#fff">
                 <div class="col-md-8">
                     <h1 class="text-decorated" style="color:#fff"><b style="color:#fff">CKK Social Skills Consultancy</b> 
-                    Youth Social Services Organization in Queens
+                    Youth Social Services Organization
                 </h1>
                 </div>
             </div>
@@ -55,26 +55,6 @@
                 </div>
             </div>
 
-<!-- ABA SERVICES -->
-        <div class="row justify-content-between">
-          <div class="col-12 col-lg-5">
-            <img src="assets/images/002.jpg" alt="Image">
-          </div>
-          <div class="col-12 col-lg-1"></div>
-          <div class="col-12 col-lg-6">
-            <div class="row">
-              <div class="col">
-                <h5 class="fs-20 font-weight-bold">ABA Services</h5>
-                <p>
-                  Applied Behavior Analysis therapy focuses on driving positive outcomes for children diagnosed on the autism spectrum, applying the science of how behavior and learning work in real situations. The goal is to foster new skills and lessen behaviors that cause harm or interfere with learning. <br><br>
-                        <u>Private Lesson</u><br>
-                        $100 / 60 minutes <br>
-                        $140 / 90 minutes
-                </p>
-              </div>
-            </div>
-        </div>
-      </div>
 
 
 <!-- COOKING CLASS -->
@@ -127,7 +107,7 @@
                   <b>Children (Ages 6-9 Years)</b><br>
                   Through the use of stories, music, games and props, founded in theme-based teaching, children release restless energy while honing motor and language skills, boosting body and breathing awareness, and developing self-confidence. Relaxation and self-reflection is included in each session. Children participate in individual, partner and group yoga. <br><br>
 
-                  <b>Yoga for Tweens (Ages 10-13)</b> <br>
+                  <b>Yoga for Tweens (Ages 10 and up)</b> <br>
                   Through poses, games and conversation, Yoga for Tweens is designed to help preteens navigate their journey from childhood to teenager. This class gives preteens the tools they need to improve concentration, reduce stress, and explore their bodies and feelings in a fun and positive way. Preteens will challenge their bodies by practicing yoga postures for increased balance, flexibility and strength and connect to their bodies and quiet their minds through breathing exercises. Preteens will also learn how to take their yoga practice off the mat and into their daily lives to help them find ease in the face of today’s challenges. Yoga for Teens Ages 13-18: Being a teenager is hard! The pressures of homework and tests, sports, music performances, and where to fit in the social hierarchy often leave teens feeling stressed, anxious and stripped of energy. This class will equip high school students with the tools to healthily manage their emotions and stress levels, while leaving them feeling empowered and self-confident. Students will learn breathing and centering exercises, yoga postures, relaxation and meditation techniques as well as how and when to use these techniques when facing challenges outside of class. Benefits of movement and meditation include lowered stress, greater relaxation and sleep, and improved concentration and mental clarity. <br><br>
 
                   <u>Private Lesson</u><br>
